--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>XML Joiner</title>
+    <title>DriveBeat Trips - Smart Travel Planning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      tailwind = { config: { corePlugins: { preflight: false } } };
+    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
